<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/tapestry">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:src="@drawable/title"
        android:contentDescription="@string/titulo"
        />
    <Button
        android:id="@+id/roll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roll_button_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:layout_margin="25dp"
        />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginStart="155dp"
        android:text="@string/restart"
        android:visibility="invisible"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/resultatImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/resultado2"
            android:src="@drawable/empty_dice"
            android:visibility="invisible"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/resultatImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/resultado1"
            android:src="@drawable/empty_dice"
            android:visibility="invisible"
            android:clickable="true"

            android:focusable="true" />
    </LinearLayout>

</LinearLayout>